<resources>
    <string name="app_name">AppComponentes</string>
    <string name="valingresar">INGRESAR AL APP</string>
    <string name="valtitulo">REGISTRO DE PERSONAS</string>
    <string name="valnombres">Ingrese sus nombres</string>
    <string name="valapellidos">Ingrese sus apellidos</string>
    <string name="valgenero">Seleccione su género:</string>
    <string name="valmasculino">Masculino</string>
    <string name="valfemenino">Femenino</string>
    <string name="valotro">Otro</string>
    <string name="valhobbies">Seleccione sus Hobbies:</string>
    <string name="valfutbol">Futbol</string>
    <string name="valarte">Diseño artístico</string>
    <string name="valotroshobbies">Otros Hobbies</string>
    <string name="valestadocivil">Seleccione su estado civil:</string>
    <string name="valnotificar">¿Desea recibir notificaciones?</string>
    <string name="valregistrar">REGISTRAR PERSONA</string>
    <string name="vallistado">LISTA PERSONAS</string>
    <string name="valtitulolistado">LISTA DE PERSONAS</string>
    <string name="valerrornomape">Ingrese sus nombres y apellidos.</string>
    <string name="valerrorgenero">Seleccione su género.</string>
    <string name="valerrorhobbies">Seleccione al menos un hobbie.</string>
    <string name="valerrorestcivil">Seleccione su estado civil.</string>
    <string name="mensajeregpersona">Persona registrada correctamente!!!</string>
</resources>